Doc: add getting started page Web: correct links

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-    <xlink rel="stylesheet" type="text/css" href="style.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
@@ -37,7 +36,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/">Documentation</a></li>
                             <li><a href="doc/GettingStarted.html">Getting started</a></li>
-                            <li><a href="docs/API/">API documentation</a></li>
+                            <li><a href="doc/API/">API documentation</a></li>
                             <li class="divider"></li>
                             <li><a href="http://www.nudoq.org/#!/Projects/OxyPlot/" target="_blank">Documentation at NuDoq</a></li>
                         </ul>
@@ -81,7 +80,7 @@
             <p>The core library is a <a href="http://msdn.microsoft.com/en-us/library/vstudio/gg597391(v=vs.100).aspx" target="_blank">Portable Class Library</a> which can is shared between different user interface platforms. Custom controls are implemented for WPF, Windows 8, Windows Forms, Silverlight, GTK#, Xamarin.iOS and Xamarin.Android.</p>
             <p>
                 <a class="btn btn-primary btn-lg" role="button" href="ExampleBrowser/" target="_blank">Examples &raquo;</a>&nbsp;
-                <a class="btn btn-primary btn-lg" role="button" href="doc/Features.html/">Features &raquo;</a>&nbsp;
+                <a class="btn btn-primary btn-lg" role="button" href="doc/Features.html">Features &raquo;</a>&nbsp;
                 <a class="btn btn-primary btn-lg" role="button" href="doc/GettingStarted.html">Get started &raquo;</a>
             </p>
         </div>
