Change layout of web page

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="utf-8" />
@@ -70,7 +70,12 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1>OxyPlot is open source and portable!</h1>
+            <p>&nbsp;</p>
+            <p>
+                <img class="img-responsive" src="../icons/OxyPlot_64.png" alt="OxyPlot">
+            </p>
+            <p></p>
+            <!--h1>OxyPlot is open source and portable!</h1>-->
             <!--<img src="../icons/OxyPlot_128.png" style="float:right; padding: 0 0 0 1em"/>-->
             <p>OxyPlot is an open source plotting library for .NET.</p>
             <p>
@@ -87,9 +92,6 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            <p><img class="img-responsive" src="examples/Example1.png" alt="OxyPlot example 1"></p>
-        </div>
 
         <div class="row">
             <div class="col-md-4">
@@ -99,21 +101,29 @@
             </div>
             <div class="col-md-4">
                 <h2>Getting started</h2>
-                <p>It should not take much time to get a plot running in your application. Use the NuGet package manager to add the OxyPlot references. Add a "Plot" control to your user interface. Then create a "PlotModel" and bind or assign this to the control.</p>
+                <p>It should not take much time to get a plot into your application. Use the NuGet package manager to add the OxyPlot references. Add a "Plot" control to your user interface. Then create a "PlotModel" and bind or assign this to the control.</p>
                 <p><a class="btn btn-default" href="doc/GettingStarted.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Contribute</h2>
-                <p>This project is continuously evolving. Any kind of help is greatly appreciated. It could be writing documentation, testing, coding or helping out on the discussion forum!</p>
+                <p>This project is continuously evolving and any kind of help is greatly appreciated. It could be writing documentation, testing, coding or helping out on the discussion forum!</p>
                 <p>
                     <a class="btn btn-default" href="doc/Contributions.html" role="button">Read more &raquo;</a>
                     <!--          <a class="btn btn-default" href="https://oxyplot.codeplex.com/SourceControl/network/create/fork" role="button">Fork me on CodePlex &raquo;</a>-->
                 </p>
             </div>
         </div>
+
+        <hr class="featurette-divider">
+
     </div>
 
     <div class="container marketing">
+
+        <div class="row">
+            <img class="center-block img-responsive" src="examples/Example1.png" alt="OxyPlot example 1">
+        </div>
+
 
         <!--
 
