--- a/Web/index.html
+++ b/Web/index.html
@@ -69,19 +69,11 @@
     </div>
 
     <div class="jumbotron">
-        <div class="container">
-            <p>&nbsp;</p>
-            <p>
-                <img class="img-responsive" src="../icons/OxyPlot_64.png" alt="OxyPlot">
-            </p>
-            <p></p>
-            <!--h1>OxyPlot is open source and portable!</h1>-->
-            <!--<img src="../icons/OxyPlot_128.png" style="float:right; padding: 0 0 0 1em"/>-->
+        <div class="container text-center">
+            <p> </p>
+            <p><img class="block-center" src="../icons/OxyPlot_64.png" alt="OxyPlot"></p>
             <p>OxyPlot is an open source plotting library for .NET.</p>
-            <p>
-                The code is licensed under the very liberal <a href="http://www.tldrlegal.com/license/mit-license" target="_blank">MIT license</a>.
-                This means that the library can be used in commercial applications, and modified as much as you want. But remember there is no warranty or support included...
-            </p>
+            <p>The code is licensed under the very liberal <a href="http://www.tldrlegal.com/license/mit-license" target="_blank">MIT license</a>. This means that the library can be used in commercial applications, and modified as much as you want. But remember there is no warranty or support included...</p>
             <p>The core library is a <a href="http://msdn.microsoft.com/en-us/library/vstudio/gg597391(v=vs.100).aspx" target="_blank">Portable Class Library</a> which can is shared between different user interface platforms. Custom controls are implemented for WPF, Windows 8, Windows Forms, Silverlight, GTK#, Xamarin.iOS and Xamarin.Android.</p>
             <p>
                 <a class="btn btn-primary btn-lg" role="button" href="ExampleBrowser/" target="_blank">Examples &raquo;</a>&nbsp;
