Update version number in docs

--- a/Web/index.html
+++ b/Web/index.html
@@ -34,7 +34,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="doc/">Documentation</a></li>
+                            <li><a href="doc/">Index</a></li>
                             <li><a href="doc/GettingStarted.html">Getting started</a></li>
                             <li><a href="doc/API/">API documentation</a></li>
                             <li class="divider"></li>
