web: change nav bars

--- a/Documentation/Web_Template.html
+++ b/Documentation/Web_Template.html
@@ -24,18 +24,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="Index.html">Index</a></li>
-                            <li><a href="GettingStarted.html">Getting started</a></li>
-                            <li><a href="API/Index.html">API documentation</a></li>
-                            <li class="divider"></li>
-                            <li><a href="http://www.nudoq.org/#!/Projects/OxyPlot/" target="_blank">Documentation at NuDoq</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="../ExampleBrowser/" target="_blank">Examples</a></li>
-                    <li><a href="http://oxyplot.codeplex.com" target="_blank">Codeplex</a></li>
+                    <li><a href="Index.html">Index</a></li>
+                    <li><a href="API/Index.html" target="_blank">API</a></li>
                 </ul>
             </div>
         </div>
