--- a/Web/index.html
+++ b/Web/index.html
@@ -34,9 +34,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="doc/">Index</a></li>
+                            <li><a href="doc/Index.html">Index</a></li>
                             <li><a href="doc/GettingStarted.html">Getting started</a></li>
-                            <li><a href="doc/API/">API documentation</a></li>
+                            <li><a href="doc/API/Index.html" target="_blank">API documentation</a></li>
                             <li class="divider"></li>
                             <li><a href="http://www.nudoq.org/#!/Projects/OxyPlot/" target="_blank">Documentation at NuDoq</a></li>
                         </ul>
