small improvements of documentation

--- a/Web/index.html
+++ b/Web/index.html
@@ -74,7 +74,7 @@
             <p><img class="block-center" src="../icons/OxyPlot_64.png" alt="OxyPlot"></p>
             <p>OxyPlot is an open source plotting library for .NET.</p>
             <p>The code is licensed under the very liberal <a href="http://www.tldrlegal.com/license/mit-license" target="_blank">MIT license</a>. This means that the library can be used in commercial applications, and modified as much as you want. But remember there is no warranty or support included...</p>
-            <p>The core library is a <a href="http://msdn.microsoft.com/en-us/library/vstudio/gg597391(v=vs.100).aspx" target="_blank">Portable Class Library</a> which can is shared between different user interface platforms. Custom controls are implemented for WPF, Windows 8, Windows Forms, Silverlight, GTK#, Xamarin.iOS and Xamarin.Android.</p>
+            <p>The core library is a <a href="http://msdn.microsoft.com/en-us/library/vstudio/gg597391(v=vs.100).aspx" target="_blank">Portable Class Library</a> which is shared between different user interface platforms. Custom controls are implemented for WPF, Windows 8, Windows Forms, Silverlight, GTK#, Xamarin.iOS and Xamarin.Android.</p>
             <p>
                 <a class="btn btn-primary btn-lg" role="button" href="ExampleBrowser/" target="_blank">Examples &raquo;</a>&nbsp;
                 <a class="btn btn-primary btn-lg" role="button" href="doc/Features.html">Features &raquo;</a>&nbsp;
@@ -88,7 +88,8 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Features</h2>
-                <p>The same plotting code can be used on different user interface platforms, and the plots can be exported to file formats like <a href="examples/Example1.png">png</a>, <a href="examples/Example1.pdf">pdf</a> and <a href="examples/Example1.svg">svg</a>.</p>
+                <p>OxyPlot contains many different axis and series types. If you need some functionality that is not included in the library, you can create a derived class and override the rendering implementation.</p>
+                <p>The plots can be exported to file formats like <a href="examples/Example1.png">png</a>, <a href="examples/Example1.pdf">pdf</a> and <a href="examples/Example1.svg">svg</a>.</p>
                 <p><a class="btn btn-default" href="doc/Features.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
