Minor documentation changes

--- a/Web/index.html
+++ b/Web/index.html
@@ -69,12 +69,13 @@
     </div>
 
     <div class="jumbotron">
-        <div class="container text-center">
-            <p> </p>
-            <p><img class="block-center" src="../icons/OxyPlot_64.png" alt="OxyPlot"></p>
+        <div class="container text-left">
+            <p style="height:4em"> </p>
+<!--            <p><img class="block-center" src="../icons/OxyPlot_64.png" alt="OxyPlot"></p>-->
             <p>OxyPlot is an open source plotting library for .NET.</p>
             <p>The code is licensed under the very liberal <a href="http://www.tldrlegal.com/license/mit-license" target="_blank">MIT license</a>. This means that the library can be used in commercial applications, and modified as much as you want. But remember there is no warranty or support included...</p>
             <p>The core library is a <a href="http://msdn.microsoft.com/en-us/library/vstudio/gg597391(v=vs.100).aspx" target="_blank">Portable Class Library</a> which is shared between different user interface platforms. Custom controls are implemented for WPF, Windows 8, Windows Forms, Silverlight, GTK#, Xamarin.iOS and Xamarin.Android.</p>
+            <p style="height:2em"> </p>
             <p>
                 <a class="btn btn-primary btn-lg" role="button" href="ExampleBrowser/" target="_blank">Examples &raquo;</a>&nbsp;
                 <a class="btn btn-primary btn-lg" role="button" href="doc/Features.html">Features &raquo;</a>&nbsp;
