Include WP8 in web index page

--- a/Web/index.html
+++ b/Web/index.html
@@ -53,14 +53,15 @@
                             <li><a href="http://nuget.org/List/Packages/OxyPlot.Pdf/" target="_blank">OxyPlot.Pdf</a></li>
                             <li><a href="http://nuget.org/List/Packages/OxyPlot.OpenXml/" target="_blank">OxyPlot.OpenXml</a></li>
                             <li><a href="http://nuget.org/List/Packages/OxyPlot.GtkSharp/" target="_blank">OxyPlot.GtkSharp</a></li>
+                            <li><a href="http://nuget.org/List/Packages/OxyPlot.WP8/" target="_blank">OxyPlot.WP8</a></li>
+                            <li><a href="http://nuget.org/List/Packages/OxyPlot.XamarinIOS/" target="_blank">OxyPlot.XamarinIOS</a></li>
+                            <li><a href="http://nuget.org/List/Packages/OxyPlot.XamarinAndroid/" target="_blank">OxyPlot.XamarinAndroid</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Xamarin <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="http://components.xamarin.com/" target="_blank">OxyPlot for iOS (under construction)</a></li>
-                            <li><a href="http://components.xamarin.com/" target="_blank">OxyPlot for Android (under construction)</a></li>
-                            <li><a href="http://components.xamarin.com/" target="_blank">OxyPlot for Mac (under construction)</a></li>
+                            <li><a href="http://components.xamarin.com/view/oxyplot" target="_blank">OxyPlot component (under construction)</a></li>
                         </ul>
                     </li>
                 </ul>
